--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,19 +20,18 @@
 					 		<% if current_user && (current_user == post.user || current_user.username == "admin") %>
 					 			<%= link_to '<i class="fa fa-pencil-square" aria-hidden="true"></i>'.html_safe,
 		 edit_post_path(post) %>&nbsp;&nbsp;|&nbsp;&nbsp;
-								<%= link_to '<i class="fa fa-trash" aria-hidden="true"></i>'.html_safe, post, method: :delete, data: { confirm: 'Jesteś pewny/a, że chcesz usunąć?' } %>
+								<%= link_to '<i class="fa fa-trash" aria-hidden="true"></i>'.html_safe, post, method: :delete, data: { confirm: t('post.confirm') } %>
 					 		<% end %>
 					 	</div>
 						<div class="datetime">
-							<%= post.created_at.in_time_zone("Europe/Warsaw").strftime('%d-%m-%Y %H:%M:%S') %> 
+							<%= post_date(post) %> 
 						</div>
 			       	</div>
 					<blockquote>
 			        	<%= post.summary %>
 			        </blockquote>
 			        <div class="read-more">
-		        		<% @a = post.comments.size %>
-						<%= link_to "Komentarze: #{@a}", post %>
+						<%= post_comments(post) %>
 					</div>
 		</div>
 	<% end %>
