--- a/app/views/posts/news.html.erb
+++ b/app/views/posts/news.html.erb
@@ -3,7 +3,7 @@
 
 <div class="posts-list">
 	<div class="page-heading">
-		<h1>Aktualności:</h1>
+		<h1><%= t('post.admin') %></h1>
 	</div>
 	<div id="word-box">
 		<%= render "show" %>
@@ -19,18 +19,18 @@
 			    			<i class="fa fa-2x fa-bookmark" aria-hidden="true"></i>
 			    		</div>
 			    		<h4> 
-			    			<%= link_to post.title, post %> -&nbsp;<a href="/11_zygmunt/write/user/<%= post.user.username %>"><%= post.user.username %></a>
+			    			<%= link_to post.title, post %> -&nbsp;<%= post.user.username %></a>
 			    		</h4>
 					</div>
 					<div class="post-management">
 						<% if current_user && current_user.username == "admin" %>
 							<%= link_to '<i class="fa fa-pencil-square" aria-hidden="true"></i>'.html_safe,
 	 edit_post_path(post) %>&nbsp;&nbsp;|&nbsp;&nbsp;
-							<%= link_to '<i class="fa fa-trash" aria-hidden="true"></i>'.html_safe, post, method: :delete, data: { confirm: 'Jesteś pewny/a, że chcesz usunąć?' } %>
+							<%= link_to '<i class="fa fa-trash" aria-hidden="true"></i>'.html_safe, post, method: :delete, data: { confirm: t('post.confirm') } %>
 						<% end %>
 					</div>
 					<div class="datetime">
-						<%= post.created_at.in_time_zone("Europe/Warsaw").strftime('%d-%m-%Y %H:%M:%S') %> 
+						<%= post_date(post) %> 
 					</div>
 		       </div>
 				
@@ -40,7 +40,7 @@
 		        </blockquote>
 		        
 		        <div class="read-more">
-		        	<%= link_to 'Czytaj dalej', post %>
+		        	<%= link_to t('post.read'), post %>
 		        </div>
 				<div class="shadow"></div>
 				
