--- a/app/views/trios/index.html.erb
+++ b/app/views/trios/index.html.erb
@@ -1,13 +1,12 @@
 <% if current_user.username == "admin" %>
 <p id="notice"><%= notice %></p>
 
-<h1>Słowa dnia:</h1>
-
+<h1><%= t('trio.all') %></h1>
 
     <% @trios.each do |trio| %>
     <%= trio.created_at.strftime('%d-%m-%Y') %> =>
 <%= trio.word.content %> - <%= trio.next.content %> - <%= trio.previous.content %> || 
-<%= link_to 'Usuń', trio, method: :delete, data: { confirm: 'Czy na pewno chcesz usunąć?' } %> <br />
+<%= link_to 'Delete', trio, method: :delete, data: { confirm: t('trio.delete') } %> <br />
     <% end %>
 
 <br>
