--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Edytuj opowiadanie</h1>
+<h1><%= t('post.edit') %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Wróć do opowiadania', @post %> |
-<%= link_to 'Wszystkie opowiadania', posts_path %>
+<%= link_to t('post.back'), @post %> |
+<%= link_to  t('post.all'), posts_path %>
