--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,3 @@
-<% if current_user.username == "admin" %><div id ="admin">
-<h1>Aktualności:</h1></div>
-<% else %>
-<h1>Nowe opowiadanie:</h1>
-<%end%>
+<h1> <%= post_new %> </h1>
 <%= render 'form' %>
-
-<%= link_to 'Powrót', posts_path %>
+<%= link_to t('post.all'), posts_path %>
